k8/client-config.yaml
# Deployment configuration
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment  # The name of the Deployment
spec:
  replicas: 3 # The number of Pods to create
  selector:
    matchLabels:
      component: client  # Selector to match Pods controlled by this Deployment
  template:
    metadata:
      labels:
        component: client  # Labels to apply to Pods created by this Deployment
    spec:
      containers:
        - name: client  # Name of the container
          image: enzofali/multi-client:v1  # Docker image to use
          ports:
            - containerPort: 3000  # Port on which the container listens

---

# Service configuration
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip  # The name of the Service
spec:
  type: ClusterIP  # Type of the Service (ClusterIP provides an internal cluster-internal IP)
  selector:
    component: client  # Selector to determine which Pods the Service should forward traffic to
  ports:
    - port: 3000  # Port on which the Service listens
      targetPort: 3000  # Port to forward incoming traffic to on the Pods
      protocol: TCP
