k8/ingress-service.yaml
# Ingress configuration
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service  
  annotations:  # Additional configuration 
    kubernetes.io/ingress.class: 'nginx'  # Specifies the Ingress controller class
    nginx.ingress.kubernetes.io/use-regex: 'true'  # Enables regular expression matching
    nginx.ingress.kubernetes.io/rewrite-target: /$1  # Rewrites the target URL
spec:
  rules:  
    - http:  # Handle HTTP requests
        paths:  # Define different paths and their corresponding backends
          - path: /?(.*)  # Match any path (.*), use a prefix type
            pathType: Prefix 
            backend:  # Define the backend service for this path
              service:  # The service to forward requests to
                name: client-clusterip  
                port:  # Specify the target port of the service
                  number: 3000  
          - path: /api/?(.*)  # Match paths starting with /api/ (.*), use a prefix type
            pathType: Prefix  
            backend: 
              service:  
                name: server-clusterip  
                port: 
                  number: 5000
